--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-imageoptim": "~1.4.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-newer": "~0.7.0"
   }
 }
